<resources>
    <string name="app_name">Zakat Pay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eZakat Payment</string>
    <string name="nav_header_subtitle">contact@ezakatpay.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Share</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Instructions</string>
    <string name="calculate_zakat">Calculate Zakat</string>
    <string name="total_gold_value_rm_2f">Total Gold Value: RM %.2f</string>
    <string name="gold_payable_value_rm_2f">Gold Payable Value: RM %.2f</string>
    <string name="total_zakat_rm_2f">Total Zakat Payable: RM %.2f</string>
    <string name="e_g_100">e.g., 100</string>
    <string name="ribbon">ribbon</string>
    <string name="developer_s_profile">Developer\'s Profile</string>
    <string name="picuser">picuser</string>
    <string name="name_nur_ruzana_bt_mohd_zukhi">NAME: NUR RUZANA BT MOHD ZUKHI</string>
    <string name="student_id_2022887548">STUDENT ID: 2022887548</string>
    <string name="programme_code_d1cdcs2405b">PROGRAMME CODE: D1CDCS2405B</string>
    <string name="email_2022887548_student_uitm_edu_my">EMAIL: 2022887548@student.uitm.edu.my</string>
    <string name="tepilink">Tepilink</string>
    <string name="github_link">GitHub Link:</string>
    <string name="https_github_com_username">https://github.com/username</string>
    <string name="bigribbon">bigribbon</string>
    <string name="how_to_calculate_zakat">How to Calculate Zakat</string>
    <string name="step_1_enter_the_weight_of_your_gold_its_type_keep_or_wear_and_the_current_gold_value_per_gram">Step 1: Enter the weight of your gold, its type (keep or wear), and the current gold value per gram.</string>
    <string name="step_2_the_application_calculates_the_zakat_threshold_uruf_85g_for_keep_and_200g_for_wear">Step 2: The application calculates the zakat threshold (uruf): 85g for keep and 200g for wear.</string>
    <string name="step_3_subtract_the_uruf_from_the_gold_weight_to_determine_the_gold_payable_weight">Step 3: Subtract the uruf from the gold weight to determine the gold payable weight.</string>
    <string name="step_4_multiply_the_gold_payable_weight_by_the_gold_value_per_gram_to_get_the_total_payable_value">Step 4: Multiply the gold payable weight by the gold value per gram to get the total payable value.</string>
    <string name="step_5_multiply_the_total_payable_value_by_2_5_to_calculate_your_zakat">Step 5: Multiply the total payable value by 2.5% to calculate your Zakat.</string>

</resources>