<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69D4C8D5"
    tools:context=".ui.slideshow.SlideshowFragment">

    <!-- Instruction Title -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="315dp"
        android:layout_height="808dp"
        android:contentDescription="@string/bigribbon"
        android:src="@drawable/bluebow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="VisualLintBounds" />

    <!-- Instruction Step 2 -->

    <TextView
        android:id="@+id/instructionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/how_to_calculate_zakat"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/step1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:padding="16dp"
        android:text="@string/step_1_enter_the_weight_of_your_gold_its_type_keep_or_wear_and_the_current_gold_value_per_gram"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/step2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:text="@string/step_2_the_application_calculates_the_zakat_threshold_uruf_85g_for_keep_and_200g_for_wear"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/step1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:padding="16dp" />

    <!-- Instruction Step 3 -->
    <TextView
        android:id="@+id/step3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:text="@string/step_3_subtract_the_uruf_from_the_gold_weight_to_determine_the_gold_payable_weight"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/step2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:padding="16dp" />

    <!-- Instruction Step 4 -->
    <TextView
        android:id="@+id/step4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:text="@string/step_4_multiply_the_gold_payable_weight_by_the_gold_value_per_gram_to_get_the_total_payable_value"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/step3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:padding="16dp" />

    <!-- Instruction Step 5 -->
    <TextView
        android:id="@+id/step5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:text="@string/step_5_multiply_the_total_payable_value_by_2_5_to_calculate_your_zakat"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/step4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:padding="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>